--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-		<link rel="stylesheet" href="css/engine.css" />
+		<link rel="stylesheet" href="css/elements.css" />
+		<style>
+			
+		</style>
 		<script src="js/shim.js"></script>
 		<script>
 	    Event.prototype.overkill = function(){
@@ -29,8 +32,6 @@
 		</script>
 	</head>
 	<body>
-		<div id="game-world" class="world">
-			
-		</div>
+		<h3>W.A.R</h3>
 	</body>
 </html>
