--- a/html/game.html
+++ b/html/game.html
@@ -1,14 +1,23 @@
 <html>
 	<head>
 		<title>W.A.R</title>
+		<link rel="stylesheet" href="../css/three.css" />
 		<link rel="stylesheet" href="../css/engine.css" />
 		<style> </style>
 		<script src="../js/shim.js"></script>
 		<script src="../js/three.css.js"></script> 
 		<script>
+			window.onload = function(){
+				enviro = new three('war',400,400,50);
+				enviro.createMap('sand');
+			};
+			
 		</script>
 	</head>
 	<body>
-		<div class="world"></div>
+		<div id="war" class="world wireframe">
+			<ul class="terrian">
+			</ul>		
+		</div>
 	</body>
 </head>
