--- a/html/game.html
+++ b/html/game.html
@@ -8,14 +8,14 @@
 		<script src="../js/three.css.js"></script> 
 		<script>
 			window.onload = function(){
-				enviro = new three('war',400,400,50);
+				enviro = new three('war',1200,600,50);
 				enviro.createMap('sand');
 			};
 			
 		</script>
 	</head>
 	<body>
-		<div id="war" class="world wireframe">
+		<div id="war" class="world">
 			<ul class="terrian">
 			</ul>		
 		</div>
