Added Keyboard and mouse detection

--- a/html/game.html
+++ b/html/game.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="../css/engine.css" />
 		<style> </style>
 		<script src="../js/shim.js"></script>
+		<script src="../js/game.js"></script>
 		<script src="../js/three.css.js"></script> 
 		<script>
 			window.onload = function(){
