--- a/html/game.html
+++ b/html/game.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>W.A.R</title>
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 		<link rel="stylesheet" href="../css/three.css" />
 		<link rel="stylesheet" href="../css/engine.css" />
 		<style> </style>
